# fsk

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.rst  pyproject.toml
.github/workflows/: release.yml
examples/: fetch.py  fetch_metakernel.py  orex.py  wgc.py
fsk/: __init__.py  core.py  fetch.py  util.py
fsk/libfsk.dylib.dSYM/Contents/: Info.plist
fsk/libfsk.dylib.dSYM/Contents/Resources/DWARF/: libfsk.dylib
fsk/libfsk.dylib.dSYM/Contents/Resources/Relocations/aarch64/: libfsk.dylib.yml
python/examples/: hera.py
python/fsk/: __init__.py  core.py  fetch.py
src/: lib.rs  python.rs  util.rs
src/py/: mod.rs
