[package]
name = "fsk"
version = "0.5.0"
description = "Fetch SPICE kernels"
authors = ["Grégoire Henry <gregoireh@pm.me>"]
repository = "https://github.com/GregoireHENRY/fetch-spice-kernels"
edition = "2021"
# keywords = []
# categories = []

[lib]
name = "fsk"
crate-type = ["lib", "cdylib"]

# [features]

[dependencies]
snafu = "0.9"

# Python
pyo3 = { version = "0.28.2", features = [
    "multiple-pymethods",
    "experimental-inspect",
    "abi3-py314",
] }

[dev-dependencies]
rstest = "0.26.1"
serial_test = "3.4.0"
