[project]
name = "fsk"
version = "0.4.0"
description = "Fetch SPICE kernels"
readme = "README.rst"
requires-python = "==3.14.3"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "niquests>=3.18.2",
    "numpy>=2.4.3",
    "spiceypy>=8.0.2",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "maturin>=1.12.6",
    "mypy>=1.19.1",
    "ruff>=0.15.6",
    "pygments>=2.19.2",
]

[tool.maturin]
module-name = "fsk._rs"

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"
